# PEARC26-AIML-on-National-CI

./: .readthedocs.yaml  README.rst  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  introduction.rst  resources.rst  wrap-up.rst
docs/source/_static/css/: custom.css
docs/source/part1-jetstream2/: accessing-jetstream2.rst  data-exploration.rst  environment-setup.rst  generating-mels.rst  index.rst  preprocessing.rst  staging-data.rst
docs/source/part2-anvil/: accessing-anvil.rst  environment-setup.rst  index.rst  monitoring.rst  staging-model.rst  training-job.rst
docs/source/part3-ospool/: accessing-ospool.rst  collecting-results.rst  index.rst  packaging.rst  running-inference.rst  scaling-out.rst  submit-file.rst
docs/source/part4-orchestrating-across-ci/: access-and-nairr-allocations.rst  accessing-ospool.rst  activity-deconstructing-workflows.rst  annexes-across-ci.rst  index.rst  moving-data-and-models.rst  orchestration-model.rst  pitfalls-and-anti-patterns.rst  reproducibility-and-portability.rst  when-not-to-use.rst
docs/source/setup/: account-registration.rst  general-info.rst  index.rst
