[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "Daniel Morales", email = "damorales4@wisc.edu"}, {name = "Lena Duplechin Seymour", email = "l.duplechinseymour@tacc.utexas.edu"}, {name = "Suzanna Gardener", email = "gardn161@purdue.edu"}, {name = "Geoffrey Lentner", email = "glentner@purdue.edu"}, {name = "Rachel Lombardi", email = "rlombardi6@gatech.edu"}]
dynamic = ["version", "description"]
